[Java] Abstracted array elements